# kingfisher-download

./: .gitignore  .gitmodules  .travis.yml  CITATION.cff  README.md  asperaweb_id_dsa.openssh  build_docs.py  doctave.yml  ena-fast-download.py  index.html  kingfisher  kingfisher.yml  ncbi-download.py  pixi.toml  pyproject.toml  release.py  search_index.json  setup.py
.github/workflows/: deploy-docs.yml  publish-to-pypi.yml  test.yml
assets/: doctave-style.css
benchmarking/: bench_download.py  bench_download.result5.csv  benchmark.ipynb
docker/: Dockerfile.in  build.sh
docs/: README.md
docs/usage/: README.md  annotate.md  extract.md  get.md
kingfisher/: __init__.py  ena.py  exception.py  kingfisher.py  location.py  md5sum.py  sra_metadata.py  version.py
test/: in_tempdir.py  paid_tests  test_annotate.py  test_ascp.py  test_ena.py  test_get_sra_and_aws.py  test_kingfisher.py
test/data/: 2_accessions.annotate.csv  2_accessions.annotate.pq
test/test_travis/: test_annotate.py  tests_in_travis.py
test/travis/: tests_in_travis.py
usage/: annotate.html  extract.html  get.html  index.html
